# Project_LemonLime

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .qmake.stash  404.html  AGENTS.md  AUTHORS  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  Psapi.Lib  README.md  TODO  addcompilerwizard.cpp  addcompilerwizard.h  addtaskdialog.cpp  addtaskdialog.h  addtestcaseswizard.cpp  addtestcaseswizard.h  advancedcompilersettingsdialog.cpp  advancedcompilersettingsdialog.h  assignmentthread.cpp  assignmentthread.h  compiler.cpp  compiler.h  compilersettings.cpp  compilersettings.h  contest.cpp  contest.h  contestant.cpp  contestant.h  detaildialog.cpp  detaildialog.h  editvariabledialog.cpp  editvariabledialog.h  environmentvariablesdialog.cpp  environmentvariablesdialog.h  (+86 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: appimage-qt6.yml  appimage.yml  build-manual.yml  check_format.yml  cpack-deb-debian.yml  cpack-deb-ubuntu.yml  cpack-deb-ubuntu.yml.bak  cpack-deb.yml  cpack-rpm-fedora.yml  cpack-rpm-opensuse-leap.yml  cpack-rpm-opensuse-tw.yml  deploy-manual.yml  hashfile.yml  linux-static-qt6.yml  linux-static.yml  macos-qt6.yml  macos.yml  sourcefile.yml  ubuntu.yml  watcher_linux.yml  watcher_macos.yml  windows-qt6.yml  windows.yml
_astro/: Search.astro_astro_type_script_index_0_lang.CC8SmQFp.js  index.D5Qn6b1-.css  ui-core.DXoPr8zo.js
assets/: MacOSXInfo.plist.in  lemon-lime.desktop  lemon-lime.desktop.in  lemon-lime.metainfo.xml.in  lemon.rc  testlib_for_lemons.h  x-lemon-contest.xml.in
cmake/: LemonTranslations.cmake  deployment.cmake  docs.cmake  enable-asan.cmake  lemon-base.cmake  lemon-core.cmake  lemon-ui.cmake  translations.cmake
contest/: index.html
docs/reviews/: 2026-02-26.md
forms/: addcompilerwizard.ui  addtaskdialog.ui  addtestcaseswizard.ui  advancedcompilersettingsdialog.ui  compilersettings.ui  detaildialog.ui  editvariabledialog.ui  environmentvariablesdialog.ui  exttestcasemodifier.ui  exttestcasemodifierdialog.ui  exttestcaseupdater.ui  exttestcaseupdaterdialog.ui  generalsettings.ui  judgingdialog.ui  lemon.ui  opencontestwidget.ui  optionsdialog.ui  statisticsbrowser.ui  taskeditwidget.ui  testcaseeditwidget.ui  visualsettings.ui
forms_unix/: addcompilerwizard.ui  addtaskdialog.ui  addtestcaseswizard.ui  advancedcompilersettingsdialog.ui  compilersettings.ui  editvariabledialog.ui  environmentvariablesdialog.ui  generalsettings.ui  judgingdialog.ui  lemon.ui  newcontestwidget.ui  opencontestdialog.ui  opencontestwidget.ui  taskeditwidget.ui  testcaseeditwidget.ui
forms_win32/: addcompilerwizard.ui  addtaskdialog.ui  addtestcaseswizard.ui  advancedcompilersettingsdialog.ui  compilersettings.ui  detaildialog.ui  editvariabledialog.ui  environmentvariablesdialog.ui  generalsettings.ui  judgingdialog.ui  lemon.ui  newcontestdialog.ui  newcontestwidget.ui  opencontestdialog.ui  opencontestwidget.ui  optionsdialog.ui  resource.qrc  taskeditwidget.ui  testcaseeditwidget.ui  welcomedialog.ui
guide/guidedata/: about.md  compiler.md  contest.md  judge.md  settings.md  specialjudge.md  welcome.md
hooks/: pre-commit
install/: index.html
intro/: index.html
issue/: index.html
judge/: index.html
makespec/: VERSION  VERSIONSUFFIX  lemonlime.spec.in
manual/: .gitignore  README.md  astro.config.mjs  contest.typ  index.typ  install.typ  issue.typ  judge.typ  latexmkrc  lib.typ  llmanual.aux  llmanual.out  llmanual.tex  llmanual.toc  manual.qrc  manual.typ  mkdocs.yml  package-lock.json  package.json  quickstart.typ  settings.typ  statistics.typ
manual/docs/: .gitignore  contest.typ  index.md  intro.typ  issue.typ  lib.typ  manual.typ  settings.typ  statistics.typ
manual/example/: example.cdf
manual/scripts/: build_html.py
manual/site/: 404.html  index.html  judge.typ  quickstart.typ
manual/src/: content.config.ts
pagefind/: pagefind-entry.json  pagefind.en_94b4d1ffc7.pf_meta  pagefind.en_aee824759c.pf_meta
pagefind/fragment/: en_2d1ed66.pf_fragment  en_34fbd6a.pf_fragment  en_35829b3.pf_fragment  en_43eb4a2.pf_fragment  en_73bd633.pf_fragment  en_7444505.pf_fragment  en_75b2f55.pf_fragment  en_7f42697.pf_fragment  en_9419103.pf_fragment  en_a956189.pf_fragment  (+3 more)
qtlockedfile/: qtlockedfile.cpp  qtlockedfile.h  qtlockedfile_unix.cpp  qtlockedfile_win.cpp
qtsingleapplication/: qtlocalpeer.cpp  qtlocalpeer.h  qtsingleapplication.cpp  qtsingleapplication.h  qtsinglecoreapplication.cpp  qtsinglecoreapplication.h
quickstart/: index.html
settings/: index.html
src/: addcompilerwizard.cpp  addcompilerwizard.h  addtaskdialog.cpp  addtaskdialog.h  addtestcaseswizard.cpp  addtestcaseswizard.h  advancedcompilersettingsdialog.cpp  advancedcompilersettingsdialog.h  assignmentthread.cpp  assignmentthread.h  compiler.cpp  compiler.h  compilersettings.cpp  compilersettings.h  contest.cpp  contest.h  contestant.cpp  contestant.h  detaildialog.cpp  detaildialog.h  editvariabledialog.cpp  editvariabledialog.h  environmentvariablesdialog.cpp  environmentvariablesdialog.h  exportingasuojformat.cpp  exportingasuojformat.h  exportutil.cpp  exportutil.h  exttestcasemodifier.cpp  exttestcasemodifier.h  exttestcasemodifierdialog.cpp  exttestcasemodifierdialog.h  exttestcasetable.cpp  exttestcasetable.h  exttestcaseupdaterdialog.cpp  exttestcaseupdaterdialog.h  filelineedit.cpp  filelineedit.h  generalsettings.cpp  generalsettings.h  (+46 more)
statistics/: index.html
tests/test1/: CMakeLists.txt  main.cpp
tools/: checker.sh  qt_5_13.sh  qt_5_14.sh  qt_5_4.sh  qt_5_5.sh  qt_5_7.sh  ubuntu14_install_helper.sh  ubuntu16_install_helper.sh  ubuntu18_install_helper.sh
translations/: en_US.ts  lemon_ja_JP.ts  lemon_zh_CN.ts  lemon_zh_TW.ts  translations.qrc  zh_CN.ts  zh_TW.ts
unix/: watcher_linux.cpp  watcher_macos.cpp  watcher_macos.mm  watcher_unix.cpp
unix/test/: CMakeLists.txt  Makefile  add.c  hello.c  mle.c  mle_static.c  re.c  tle.c
unix/test/scripts/: mle.py  mle_static.py  redirect.py  run.py  run_sh.py  runtimeerr.py  space.py  symlink_abs.py  symlink_rel.py  tle.py  unlimit.py
(+106 files in other folders)
